--- a/style.css
+++ b/style.css
@@ -82,11 +82,76 @@ margin-right:150px;
     right: -95px;
     filter: drop-shadow(-5px 7px 1px rgba(0, 0, 0, 0.3));
 }
+.deals{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 100px;
+}
+.bloom{
+   
+    width: 367px;
+    height: 206px;
+     background-repeat:no-repeat;
+     border-radius: 14px;
+     filter: brightness(70%);
+     text-align: center;
+}
+.ana{
+   
+    width: 367px;
+    height: 197px;
+    background-repeat:no-repeat;
+     border-radius: 14px;
+      filter: brightness(60%);
+      text-align: center;
+      margin-top: 19px;
+      margin-bottom: 10px;
+}
 
-
-
-
-
+.zabo{
+    height: 425px;
+    width: 753px;
+     background-repeat:no-repeat;
+      border-radius: 14px;
+       filter: brightness(60%);
+       text-align: center;
+      
+}
+.bm-tx{
+    color: white;
+    position: absolute;
+    top: 46px;
+    left:90px;
+   
+}
+.an-tx{
+     color: white;
+    position: absolute;
+    top: 265px;
+     left:90px;
+}
+.flower-pre{
+    position:relative;
+}
+.zabo-pre{
+    position: relative;
+}
+.zb-tx{
+    position: absolute;
+    top: 140px;
+    left: 185px;
+}
+.shop-text{
+    
+    margin-left: 120px;
+    font-family:Inter, sans-serif ;
+    font-size: 28px;
+    font-weight: 500;
+    text-decoration: underline;
+    color: white;
+}
 
 
 
@@ -135,9 +200,46 @@ margin-right:150px;
 .tt{
     display: none;
 }
-
-  
+ .deals{
+    display: flex;
+    flex-direction: column;
+ }
+.bloom{
+    width: 100%;
 }
+.ana{
+    width: 100%;
+}
+.zabo{
+    width: 100%;
+    height:206px ;
+}
+.zabo-text{
+    font-size: 20px;
+   
+}
+.zb-tx{
+    top: 0px;
+    left:90px;
+    
+}
+.shop-text{
+    font-size: 16px;
+    margin-left: 60px;
+    margin-top: -20px;
+}
+
+}
+
+
+
+
+
+
+
+
+
+
 @media (min-width:577px) and (max-width:992px){
     .navbar{
         display: flex;
@@ -154,6 +256,34 @@ margin-right:150px;
         margin-left: 20px;
      }
     .bn-img{
-        width:100%;
-    }
+        width:100%;}
+
+.bloom{
+    width: 100%;
+}
+.ana{
+    width: 100%;
+}
+.zabo{
+    width: 100%;
+    height:206px;
+}
+
+.flower{
+    display: flex;
+    flex-direction: column;
+}
+
+.zabo-text{
+    font-size: 20px;
+}
+.zb-tx{
+    top: 0px;
+    left:90px
+}
+.shop-text{
+    font-size: 16px;
+    margin-left: 60px;
+    margin-top: -20px;
+}
 }
