--- a/style.css
+++ b/style.css
@@ -164,13 +164,13 @@ margin-right:150px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover; 
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 }
 .tx-colorful{
     text-align: center;
     font-family: "Noto Serif", serif;
      font-weight: bold;
-     font-size: 50px;
+     font-size: 30px;
      color: white;
      padding-top: 200px;
 }
@@ -189,12 +189,43 @@ margin-right:150px;
     width:645px;
     font-size: 16px;
      font-family: Inter, sans-serif ;
-    padding-left: 25px;
-    
+    padding-left: 25px;  
+}
+.social{
+    display: flex;
+    justify-content: space-around;
+    align-items:start;
+    margin-bottom: 70px;
+}
+.fb{
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    margin-right: 80px;
+}
+.logo-tx{
+    font-size: 22px;
+     font-family: Inter, sans-serif ;
+     color: rgba(0, 0, 0, 0.5);
+     margin-left: 80px;
+}
+.tx-home{
+    font-size: 17px;
+     font-family: Inter, sans-serif ;
+     color: rgba(0, 0, 0, 0.5);
+     list-style-type: none;
+     display: grid;
+     gap: 20px;
 }
 
-@media (max-width:576px){
 
+
+
+
+@media (max-width:576px){
+    .cart-vw{
+        margin-top: 14px;
+    }
     .dt{
         display: none;
     }
@@ -273,7 +304,19 @@ height: 50px;
 width: 321px;
 margin-left: 69px;
 }
-
+.social{
+display: flex;
+flex-direction: column;
+}
+.logo-tx{
+    margin-left: 20px;
+}
+.tx-home{
+    margin-left: -16px; 
+}
+.fb{
+  margin-left: 22px;  
+}
 }
 
 
