--- a/style.css
+++ b/style.css
@@ -81,6 +81,15 @@ margin-right:150px;
     top:-110px;
     right: -95px;
     filter: drop-shadow(-5px 7px 1px rgba(0, 0, 0, 0.3));
+    animation: trustrotate 8s ease-in 0s infinite normal;
+}
+@keyframes trustrotate{
+    from{
+        transform: rotate(45deg);
+    }
+    to{
+        transform: rotate(360deg);
+    }
 }
 .deals{
     display: flex;
@@ -217,11 +226,46 @@ margin-right:150px;
      display: grid;
      gap: 20px;
 }
-
-
-
-
-
+.tx-deals{
+    text-align: center; 
+    font-family: Noto Serif,
+     serif;font-weight: bold;
+     font-size: 50px;
+}
+.tx-deals-2{
+    text-align: center;
+    font-family:Inter, sans-serif ;
+     font-size: 22px;color: rgba(0, 0, 0, 0.5);
+     margin-bottom: 130px;
+}
+.esu-tx{
+    font-family:Inter,sans-serif;
+    color:rgba(0, 0, 0, 0.5);
+    font-size: 22px;
+}
+.esu-ni{
+    font-size: 50px;
+    font-family: Noto Serif, serif;
+    font-weight: bold;
+}
+.tx-plants{
+    margin-bottom:0px;
+    text-align: center;
+    font-size: 50px;
+    font-family: Noto Serif, serif;
+    font-weight: bold
+}
+.text-plants-2{
+    text-align: center;
+    font-family:Inter, sans-serif ;
+    color:rgba(0, 0, 0, 0.5);
+    font-size: 22px;
+    margin-bottom: 50px;
+    margin-top: 5px;
+    max-width: 100%;
+    
+    
+}
 @media (max-width:576px){
     .cart-vw{
         margin-top: 14px;
@@ -239,17 +283,46 @@ margin-right:150px;
         display: flex;
         flex-direction: column-reverse;
         align-items: start;
+        margin-top: 10px;
     }
-    
+    .esu-ni{
+        font-size: 24px; 
+        margin-left:-50px; 
+        margin-top: -40px;
+    }
+    .esu-ni br{
+        display: none;
+    }
+    .esu-tx{
+        font-size: 14px;
+        margin-left: -70px;
+    }
+    .tx-deals{
+      font-size: 24px;  
+    }
+    .tx-deals-2{
+        font-size: 16px;
+    }
     .tx-main{
        font-size: 24px;
     }
     .tx-sub{
         font-size: 14px;
+        
     }
     .bn-img{
         width:100%;
     }
+    .tx-plants{
+        font-size: 24px;
+    }
+    .text-plants-2{
+        font-size:14px ;
+        text-align: center;
+       
+        
+    }
+    
     .flower-sp{
         grid-template-columns: repeat(2,1fr); 
            gap: 10px;
@@ -298,11 +371,23 @@ margin-right:150px;
 }
 .tx-colorful{
     font-size: 20px;
+    padding-top:115px;
 }
-.btns{
-height: 50px;
-width: 321px;
-margin-left: 69px;
+.em{
+height: 49px;
+width:218px;
+margin-left:10px;
+}
+.btn-sub{
+    height: 55px;
+    width: 100px;
+    padding: 10px 15px;
+}
+.join{
+    height: 275px;
+    width:100%;
+    margin-top: -10px;
+    
 }
 .social{
 display: flex;
@@ -310,6 +395,7 @@ flex-direction: column;
 }
 .logo-tx{
     margin-left: 20px;
+    font-size: 16px;
 }
 .tx-home{
     margin-left: -16px; 
@@ -317,13 +403,16 @@ flex-direction: column;
 .fb{
   margin-left: 22px;  
 }
+.eas{
+    display: none;
+}
 }
 
+@media (min-width: 577px) {
+        .mobile-break {
+            display: none;}
 
-
-
-
-
+        }
 
 
 @media (min-width:577px) and (max-width:992px){
